# rocket_simulator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  air_force_test.py  interpolation_test.py  pyproject.toml  quaternion_util_test.py  requirements.txt  rocket_state_test.py  ruff.toml  test_equation_of_motion.py  test_inertia_tensor.py  test_interpolation.py  test_ode_solver.py  test_quaternion_util.py  test_wind.py
.github/workflows/: python-app.yml
app/: config_read.py  flight_flash_log.csv  landing_range.py  time.py
app/core/: inertia_tensor.py  interpolation.py  rocket_state.py  simple_simulation.py
config/: config.json  launch_site.kml  mass.csv  report_config.json  thrust.csv
config_sample/: config.json  launch_site.kml  report_config.json
scripts/: landing_range.py  make_report.py  migrate_typing.py  run_single.py
src/: config.py  config_read.py  graph_writer.py  landing_range.py  report_config_read.py  rotation.csv  single_simulation.py  time.csv
src/config/: config.json
src/core/: air_force.py  config.py  equation_of_motion.py  gravity_center.py  inertia_tensor.py  interpolation.py  ode_solver.py  quaternion_util.py  rocket_state.py  simple_simulation.py  simulation_context.py  (+2 more)
tests/: test_air_force.py  test_config_documentation.py  test_equation_of_motion.py  test_geography.py  test_gravity_center.py  test_inertia_tensor.py  test_interpolation.py  test_kml.py  test_landing_range.py  test_launch_site.py  test_ode_solver.py  test_quaternion_util.py  test_rocket_state.py  test_simulation_context.py  test_simulation_result.py  test_wind.py
(+10 files in other folders)
